app/assets/stylesheets/games.scss
// Place all the styles related to the games controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

body {
    text-align: center;
}
main {
    margin: auto;
    padding-top: 15px;
}

.board {
}

.board-row {
    height: 36px;
}

.board-square {
    position: relative;
    background-color: #f1f0d3;
    display: inline-block;
    padding: 1px;
    margin: 0 1px;
    width: 30px;
    height: 30px;
    overflow: hidden;
    border: solid 1px rgba(0,0,0,0);
}

.board-square.selected {
    border-color: #000;
}

.board-square:after {
    display: inline-block;
    padding: 7px 0;
    line-height: 10px;
    font-size: 6px;
    color: #444;
    font-weight: bolder;
    font-family: sans-serif;
    text-transform: uppercase;
    text-align: center;
}

.word-multiplier-2 {
    background-color: #f59ec0;
}
.word-multiplier-2:after {
    content: "Double Word";
}

.word-multiplier-3 {
    background-color: #fc0a10;
}
.word-multiplier-3:after {
    content: "Triple Word";
}

.letter-multiplier-2 {
    background-color: #a2f3f6;
}
.letter-multiplier-2:after {
    content: "Double Letter";
}

.letter-multiplier-3 {
    background-color: #35b4fc;
}
.letter-multiplier-3:after {
    content: "Triple Letter";
}

.tile {
    color: #222;
    position: relative;
    width: 24px;
    height: 24px;
    vertical-align: baseline;
    text-align: center;
    line-height: 24px;
    display: block;
    padding: 2px;
    background: #ddd;
    border: solid 1px #fff;
    border-right-color: #ccc;
    border-bottom-color: #ccc;
    font-family: serif;
    font-weight: bold;
}

.tile.tile-blank {
    color: #888;
}

.tile-face-value {
    color: #666;
    position: absolute;
    top: 12px;
    left: 18px;
    font-size: 8px;
}

.tray {
    margin-top: 10px;
}
.tray-frame {
    display: inline-block;
    background: #888;
    padding: 2px;
    border: solid 1px #999;
}

.tray-square {
    background-color: #aaa;
    display: inline-block;
    width: 34px;
    height: 34px;
    border: 1px;
    border-color: none;
    border-collapse: collapse;
    overflow: hidden;
}

